# evo_rd_platform_example

./: CMakeLists.txt  README.md  package.xml
doc/src/: initSequence.wsd  operationMode.wsd
include/sw_interface/: BaseControllerROS.h  DCDCControllerROS.h  SimBaseControllerROS.h  ToFControllerROS.h
launch/: base.launch  evo_base_4_lift_driver.launch  evo_base_driver.launch  evo_dcdc_driver.launch  evo_tof_driver.launch  localize.launch  localizer.xml  move_base.launch  move_base_teb.launch  mqtt.launch  sick_tim561_back.launch  sick_tim561_front.launch  slam.launch  socketcan_bridge.launch  tf_body_dimensions.launch  tf_laser_mounts.launch  twist_mux.launch
msg/: evo_ToF_detailed.msg
nodes/: teleopkey.py
params/: costmap_common.yaml  costmap_global.yaml  costmap_local.yaml  move_base.yaml  planner_global.yaml  planner_local.yaml  twist_mux_locks.yaml  twist_mux_topics.yaml
params/move_base_params/teb/: costmap_common_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
scripts/: 99-can-module.rules  can_init.sh  can_init_quasar.sh  clean_and_rebuild.sh
src/node/: EvoBaseControllerNode.cpp  EvoDCDCControllerNode.cpp  EvoSimBaseControllerNode.cpp  EvoToFControllerNode.cpp
src/sw_interface/: BaseControllerROS.cpp  DCDCControllerROS.cpp  SimBaseControllerROS.cpp  ToFControllerROS.cpp
